--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 
 <body>
 
+  <div id="content">
+    <header>
+      <h1></h1>
+    </header>
+    <main>
+      <div class="column">
+        <div id="lives"></div>
+        <div id="high-score"></div>
+      </div>
+      <div class="column">
+        <div id="score-images"></div>
+      </div>
+      <div class="column">
+        <div id="timer"></div>
+        <div id="score"></div>
+      </div>
+      <div class="column">
+        <div id="grid"></div>
+      </div>
+    </main>
+  </div>
+
+  <script src="./scripts/setViewportVariables.js"></script>
   <script src="./scripts/main.js"></script>
 </body>
 
