restructure section layout

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
       <h1></h1>
     </header>
     <main>
-      <div class="column">
-        <div id="lives"></div>
-        <div id="high-score"></div>
-      </div>
-      <div class="column">
-        <div id="score-images"></div>
-      </div>
-      <div class="column">
-        <div id="timer"></div>
-        <div id="score"></div>
-      </div>
-      <div class="column">
-        <div id="grid"></div>
-      </div>
+      <section id="game-info" class="main-section">
+        <div class="info-column">
+          <div id="lives"></div>
+          <div id="high-score"></div>
+        </div>
+        <div class="info-column">
+          <div id="score-images"></div>
+        </div>
+        <div class="info-column">
+          <div id="timer"></div>
+          <div id="score"></div>
+        </div>
+      </section>
+
+      <section id="game" class="main-section"></section>
     </main>
   </div>
 
