--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
         </div>
       </section>
 
-      <section id="game" class="main-section"></section>
+      <section id="game" class="main-section">
+        <div id="grid"></div>
+      </section>
     </main>
   </div>
 
-  <script src="./scripts/setViewportVariables.js"></script>
+  <script src="./scripts/config.js"></script>
+  <script src="./scripts/setup.js"></script>
   <script src="./scripts/main.js"></script>
 </body>
 
