--- a/index.html
+++ b/index.html
@@ -12,20 +12,46 @@
 
   <div id="content">
     <header>
-      <h1></h1>
+      <h1 id="title">Octopus Game</h1>
     </header>
     <main>
       <section id="game-info" class="main-section">
         <div class="info-column">
-          <div id="lives"></div>
-          <div id="high-score"></div>
+          <div id="lives">
+            <div>
+              <img src="./assets/images/life.png">
+            </div>
+            <div>
+              <img src="./assets/images/life.png">
+            </div>
+            <div>
+              <img src="./assets/images/life.png">
+            </div>
+          </div>
+          <div id="high-score" class="score">
+            <h2>999</h2>
+          </div>
         </div>
         <div class="info-column">
-          <div id="score-images"></div>
+          <div id="score-images">
+            <div>
+              <img src="./assets/images/score.jpg">
+            </div>
+            <div>
+              <img src="./assets/images/score.jpg">
+            </div>
+            <div>
+              <img src="./assets/images/score.jpg">
+            </div>
+          </div>
         </div>
         <div class="info-column">
-          <div id="timer"></div>
-          <div id="score"></div>
+          <div id="timer">
+            <h2>3</h2>
+          </div>
+          <div id="score" class="score">
+            <h2>999</h2>
+          </div>
         </div>
       </section>
 
