--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
 
   <div id="home-page" class="page">
-    <h1>Home Page</h1>
+    <div class="content">
+      <header>
+        <h1 class="title">Octopus Game</h1>
+      </header>
+      <main>
+        <h3 id="play-button">Play!</h3>
+      </main>
+    </div>
   </div>
 
   <div id="game-over-page" class="page">
@@ -24,10 +31,10 @@
 
   <div id="game-page" class="page">
     <div class="content">
-      <header>
+      <header id="game-header">
         <h1 class="title">Octopus Game</h1>
       </header>
-      <main>
+      <main id="game-main">
         <section id="game-info" class="main-section">
           <div class="info-column">
             <div id="lives">
