add other pages

--- a/index.html
+++ b/index.html
@@ -10,23 +10,37 @@
 
 <body>
 
-  <div id="home-page" class="page">
+  <div id="home-page" class="page simple-page">
     <div class="content">
       <header>
         <h1 class="title">Octopus Game</h1>
       </header>
       <main>
-        <h3 id="play-button">Play!</h3>
+        <h3 id="play-button" class="main-button">Play!</h3>
       </main>
     </div>
   </div>
 
-  <div id="game-over-page" class="page">
-    <h1>Game Over Page</h1>
+  <div id="game-over-page" class="page simple-page">
+    <div class="content">
+      <header>
+        <h1 class="title">Game Over</h1>
+      </header>
+      <main>
+        <h3 id="play-button" class="main-button">Try Again</h3>
+      </main>
+    </div>
   </div>
 
-  <div id="winner-page" class="page">
-    <h1>Winner Page</h1>
+  <div id="winner-page" class="page simple-page">
+    <div class="content">
+      <header>
+        <h1 class="title">You Won!</h1>
+      </header>
+      <main>
+        <h3 id="play-button" class="main-button">Play Again!</h3>
+      </main>
+    </div>
   </div>
 
   <div id="game-page" class="page">
