add points and lives

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <div class="info-column">
             <div id="lives">
               <div>
-                <img src="./assets/images/life.png">
+                <img src="./assets/images/life.png" class="life-image">
               </div>
               <div>
-                <img src="./assets/images/life.png">
+                <img src="./assets/images/life.png" class="life-image">
               </div>
               <div>
-                <img src="./assets/images/life.png">
+                <img src="./assets/images/life.png" class="life-image">
               </div>
             </div>
             <div id="high-score" class="score">
