update score text

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <h2>3</h2>
             </div>
             <div id="score" class="score">
-              <h2>999</h2>
+              <h2 id="score-text">999</h2>
             </div>
           </div>
         </section>
