--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
           <div class="info-column">
             <div id="timer">
-              <h2>3</h2>
+              <h2 id="timer-text">3</h2>
             </div>
             <div id="score" class="score">
               <h2 id="score-text">999</h2>
