complete score-images

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
           <div class="info-column">
             <div id="score-images">
               <div>
-                <img src="./assets/images/score.jpg">
+                <img src="./assets/images/score.jpg" class="score-image">
               </div>
               <div>
-                <img src="./assets/images/score.jpg">
+                <img src="./assets/images/score.jpg" class="score-image">
               </div>
               <div>
-                <img src="./assets/images/score.jpg">
+                <img src="./assets/images/score.jpg" class="score-image">
               </div>
             </div>
           </div>
