reset new games

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="title">Game Over</h1>
       </header>
       <main>
-        <h3 id="play-button" class="main-button">Try Again</h3>
+        <h3 id="game-over-play-button" class="main-button">Try Again</h3>
       </main>
     </div>
   </div>
@@ -38,7 +38,7 @@
         <h1 class="title">You Won!</h1>
       </header>
       <main>
-        <h3 id="play-button" class="main-button">Play Again!</h3>
+        <h3 id="winner-play-button" class="main-button">Play Again!</h3>
       </main>
     </div>
   </div>
