--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
   <script src="./scripts/dom.js"></script>
   <script src="./scripts/state.js"></script>
   <script src="./scripts/setup.js"></script>
+  <script src="./scripts/game.js"></script>
   <script src="./scripts/main.js"></script>
 </body>
 
