--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </div>
             </div>
             <div id="high-score" class="score">
-              <h2>999</h2>
+              <h2 id="high-score-text">999</h2>
             </div>
           </div>
           <div class="info-column">
