fix layout problems

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="./assets/images/life.png" class="life-image">
               </div>
             </div>
-            <div id="high-score" class="score">
+            <div id="high-score" class="stat">
               <h2 id="high-score-text">999</h2>
             </div>
           </div>
@@ -81,9 +81,9 @@
           </div>
           <div class="info-column">
             <div id="timer">
-              <h2 id="timer-text">3</h2>
+              <h2 id="timer-text" class="stat">3</h2>
             </div>
-            <div id="score" class="score">
+            <div id="score" class="stat">
               <h2 id="score-text">999</h2>
             </div>
           </div>
