layout for columns 1 and 2

--- a/index.html
+++ b/index.html
@@ -51,32 +51,29 @@
       <section id="game-info">
         <div class="info-column">
           <div id="lives">
-            <!-- <div>
-                <img src="./assets/images/life.png" class="life-image">
-              </div>
-              <div>
-                <img src="./assets/images/life.png" class="life-image">
-              </div>
-              <div>
-                <img src="./assets/images/life.png" class="life-image">
-              </div>
-            </div> -->
-            <div id="high-score" class="stat">
-              <!-- <h2 id="high-score-text">999</h2> -->
+            <div>
+              <img src="./assets/images/life.png" class="life-image">
+            </div>
+            <div>
+              <img src="./assets/images/life.png" class="life-image">
+            </div>
+            <div>
+              <img src="./assets/images/life.png" class="life-image">
             </div>
           </div>
+          <div id="high-score" class="textbox">
+            <h2 id="high-score-text">999</h2>
+          </div>
         </div>
-        <div class="info-column">
-          <div id="score-images">
-            <!-- <div>
-                  <img src="./assets/images/score.jpg" class="score-image">
-                </div>
-                <div>
-                  <img src="./assets/images/score.jpg" class="score-image">
-                </div>
-                <div>
-                  <img src="./assets/images/score.jpg" class="score-image">
-                </div> -->
+        <div id="score-images" class="info-column">
+          <div>
+            <img src="./assets/images/score.jpg" class="score-image">
+          </div>
+          <div>
+            <img src="./assets/images/score.jpg" class="score-image">
+          </div>
+          <div>
+            <img src="./assets/images/score.jpg" class="score-image">
           </div>
         </div>
         <div class="info-column">
