--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
           </div>
         </div>
         <div class="info-column">
-          <div id="timer">
-            <!-- <h2 id="timer-text" class="stat">3</h2> -->
+          <div id="timer" class="textbox">
+            <h2 id="timer-text">3</h2>
           </div>
-          <div id="score" class="stat">
-            <!-- <h2 id="score-text">999</h2> -->
+          <div id="score" class="textbox">
+            <h2 id="score-text">999</h2>
           </div>
         </div>
       </section>
