--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <!-- <div id="home-page" class="page">
+  <div id="home-page" class="page">
     <div class="content">
       <header>
         <h1 class="title">Octopus Game</h1>
@@ -41,11 +41,11 @@
         <h3 id="winner-play-button" class="main-button">Play Again!</h3>
       </main>
     </div>
-  </div> -->
+  </div>
 
   <div id="game-page" class="page">
-    <header>
-      <!-- <h1 class="title">Octopus Game</h1> -->
+    <header class="textbox">
+      <h2>Octopus Game</h2>
     </header>
     <main>
       <section id="game-info">
@@ -97,7 +97,7 @@
   <script src="./scripts/state.js"></script>
   <script src="./scripts/setup.js"></script>
   <script src="./scripts/game.js"></script>
-  <!-- <script src="./scripts/main.js"></script> -->
+  <script src="./scripts/main.js"></script>
 </body>
 
 </html>
