--- a/index.html
+++ b/index.html
@@ -11,36 +11,30 @@
 <body>
 
   <div id="home-page" class="page">
-    <div class="content">
-      <header>
-        <h1 class="title">Octopus Game</h1>
-      </header>
-      <main>
-        <h3 id="play-button" class="main-button">Play!</h3>
-      </main>
-    </div>
+    <header class="textbox">
+      <h2>Octopus Game</h2>
+    </header>
+    <main>
+      <h3 id="play-button" class="main-button">Play!</h3>
+    </main>
   </div>
 
   <div id="game-over-page" class="page">
-    <div class="content">
-      <header>
-        <h1 class="title">Game Over</h1>
-      </header>
-      <main>
-        <h3 id="game-over-play-button" class="main-button">Try Again</h3>
-      </main>
-    </div>
+    <header clas="textbox">
+      <h2>Game Over</h2>
+    </header>
+    <main>
+      <h3 id="game-over-play-button" class="main-button">Try Again</h3>
+    </main>
   </div>
 
   <div id="winner-page" class="page">
-    <div class="content">
-      <header>
-        <h1 class="title">You Won!</h1>
-      </header>
-      <main>
-        <h3 id="winner-play-button" class="main-button">Play Again!</h3>
-      </main>
-    </div>
+    <header class="textbox">
+      <h2>You Won!</h2>
+    </header>
+    <main>
+      <h3 id="winner-play-button" class="main-button">Play Again!</h3>
+    </main>
   </div>
 
   <div id="game-page" class="page">
