--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div id="game-over-page" class="page">
-    <header clas="textbox">
+    <header class="textbox">
       <h2>Game Over</h2>
     </header>
     <main>
