update score and highscore on gameover page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </div>
       <div id="game-over-info">
         <div class="textbox">
-          <h2 class="timer-text">3</h2>
+          <h2 id="game-over-high-score-text">3</h2>
         </div>
         <div class="textbox">
-          <h2 class="score-text">999</h2>
+          <h2 id="game-over-score-text">999</h2>
         </div>
       </div>
     </main>
